gccida/c1/may_trap_p
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/may_trap_p/src/rtlanal.c:2758:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[BYTE2( v3)] == MODE_FLOAT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/may_trap_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/may_trap_p/src/rtlanal.c:2759:13: error: must use 'enum' tag to refer to type 'mode_class'
|| *( const mode_class *)( ( char *)mode_class_0 + ( ( *( _DWORD *)x->fld[0].rtwint >> 14) & 0x3FC)) == MODE_FLOAT ) 
            ^
            enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/may_trap_p/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/may_trap_p/src/rtlanal.c:2759:37: error: use of undeclared identifier 'mode_class_0'
|| *( const mode_class *)( ( char *)mode_class_0 + ( ( *( _DWORD *)x->fld[0].rtwint >> 14) & 0x3FC)) == MODE_FLOAT ) 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/may_trap_p/src/rtlanal.c:2765:15: error: must use 'enum' tag to refer to type 'mode_class'
if ( *( const mode_class *)( ( char *)mode_class_0 + v4) == MODE_FLOAT ) 
              ^
              enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/may_trap_p/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/may_trap_p/src/rtlanal.c:2765:39: error: use of undeclared identifier 'mode_class_0'
if ( *( const mode_class *)( ( char *)mode_class_0 + v4) == MODE_FLOAT ) 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/may_trap_p/src/rtlanal.c:2789:15: error: must use 'enum' tag to refer to type 'mode_class'
if ( *( const mode_class *)( ( char *)mode_class_0 + ( ( v3 >> 14) & 0x3FC)) == MODE_FLOAT ) 
              ^
              enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/may_trap_p/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/may_trap_p/src/rtlanal.c:2789:39: error: use of undeclared identifier 'mode_class_0'
if ( *( const mode_class *)( ( char *)mode_class_0 + ( ( v3 >> 14) & 0x3FC)) == MODE_FLOAT ) 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/may_trap_p/src/rtlanal.c:2791:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v7 = ( __int64)x[1]; 
               ^~~~
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/may_trap_p/src/obj/rtlanal.o] Error 1
